# duraark_compress

./: CMakeLists.txt  Dockerfile  docker_build_all.sh
apps/: duraark_compress.cpp  duraark_decompress.cpp
include/: block_info.hpp  common.hpp  decomposition.hpp  quadtree.hpp  range.hpp
src/: decomposition.cpp  quadtree.cpp
